# factorization

./: .gitignore  CMakeLists.txt  README.md  generateN.py  main.cpp
benchmark/: benchmark.py  benchmark2.py  dataset.json  dataset.txt  fillDataset.py
src/fermat/: fermat.cpp  fermat.hpp
src/gnfs/: computeSquareRoots.cpp  computeSquareRoots.hpp  factorBases.cpp  factorBases.hpp  gnfs.cpp  gnfs.hpp  sieving.cpp  sieving.hpp
src/quadratic_sieve/: quadratic_sieve.cpp  quadratic_sieve.hpp
src/trial_div/: trial_division.cpp  trial_division.hpp
src/utils/: statsVar.cpp  statsVar.hpp
src/utils/utils_NTL/: hash_ZZ.cpp  hash_ZZ.hpp  utils_ZZX.cpp  utils_ZZX.hpp
src/utils/utils_modP/: roots_modP.cpp  roots_modP.hpp
src/utils/utils_mpz/: hash_mpz.cpp  hash_mpz.hpp  mpz_ZZ.cpp  mpz_ZZ.hpp  mpz_ull.cpp  mpz_ull.hpp
src/utils/utils_print/: print_stuff.cpp  print_stuff.hpp
test/: fermat_test.cpp  gnfs_test.cpp  quadratic_sieve_test.cpp  trial_div_test.cpp
